# MeetSphere

./: .bash_profile  .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.toml  .required  API.md  Dockerfile  README.md  babel.config.cjs  db.sqlite3  docker-compose.yml  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  run.sh  serve.py  startup.sh  submit.py  submit_p2.py  test_calendar.ics  tsconfig.json
.github/workflows/: pages.yml
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/meetsphere/: apps.py  models.py  serailizers.py  views.py  views_meeting.py
docs/: main.typ  template.typ
docs/old/: serve.py  submit.py
src/: App.tsx  calendar-create.html  calendar-create.scss  calendar-timepicker.html  calendar-timepicker.scss  calendar.html  calendar.scss  contacts.html  contacts.scss  global.scss  home.html  home.scss  index.html  index.scss  lib.d.ts  lib.js  lib.ts  main.tsx  schedule.html  schedule.scss  template.html  timepicker.html  vars.scss
src/assets/: 20240128_112700.jpg:Zone.Identifier  22280294.jpg:Zone.Identifier  50559854.jpg:Zone.Identifier  72054183.jpg:Zone.Identifier  README.md
src/components/: CalendarDetails.scss  CalendarDetails.tsx  CalendarTable.scss  CalendarTable.tsx  CalendarView.scss  CalendarView.tsx  Loading.sass  Loading.tsx  LoginOverlay.tsx  NavBar.tsx
src/lib/: examples.ts  lib.ts  sdk.ts  types.ts  ui.ts  utils.ts
src/pages/: Calendar.scss  Calendar.tsx  CalendarCreate.scss  CalendarCreate.tsx  CalendarEdit.tsx  CalendarView.scss  CalendarView.tsx  (+9 more)
(+13 files in other folders)
