[tool.poetry]
name = "backend"
version = "0.1.0"
description = "CSC309 Course Project - 1 on 1 meeting web application"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
certifi = "^2024.2.2"
requests = "^2.31.0"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
